btrfs: don't leak opened directory handle

Closing a directory handle file descriptor via close() is undefined,
according to:
http://pubs.opengroup.org/onlinepubs/9699919799/functions/dirfd.html

Signed-off-by: Noel Power <noel.power@suse.com>
Reviewed-by: David Disseldorp <ddiss@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>

(cherry picked from commit 6faef4d213e76077bdbaf83cf07f0261c11dc757)
Bug: https://bugzilla.samba.org/show_bug.cgi?id=10918